librearias y imagen principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+
+<img src="assets/images/pattern-bg.png" class="img-fluid" alt="...">
+
 <input type="text" #box>
-<button (click)="getValue(box.value)">Get value</button>
+<button (click)="getValue(box.value)" class="btn btn-primary">Get value</button>
 
 <div id="map"></div>
